[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modbridge"
version = "0.1.0"
description = "Automated update pipeline for Minecraft servers: bridges Minecraft Server Maintainer and SakuraUpdater into one unattended workflow."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ModBridge contributors" }]
keywords = ["minecraft", "neoforge", "modrinth", "server", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
modbridge = "modbridge.cli.main:app"

[project.urls]
Homepage = "https://github.com/modbridge/modbridge"

[tool.hatch.build.targets.wheel]
packages = ["src/modbridge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["modbridge"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
